syntax="proto3";

option csharp_namespace="GrpcDeadLinesCancellationServer";

package message;


service Message{

rpc SendMessage(MessageRequest) returns (MessageResponse); 
}

message MessageRequest{
   string Message=1;
}

message MessageResponse{
	string Message=1;
}